# turkish-pdf-summarizer-quizzer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
examples/: sample_input.txt  sample_quiz.txt  sample_summary.txt  summary_output.txt
src/: chunking.py  extractive.py  i18n.py  llm_pipeline.py  pdf_utils.py  postprocess.py  prompts.py  quiz_generator.py  test_chunking.py  test_llm.py  test_pdf_extract.py
